# slint-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: logger.rs  main.rs
ui/: app.slint
